--- a/afu_erdwaerme_pub/build.gradle
+++ b/afu_erdwaerme_pub/build.gradle
@@ -3,25 +3,26 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'refreshSolr'
+defaultTasks 'transferErdwaerme'
 
-task transferAfuErdwaerme(type: Db2Db){
-    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+task transferErdwaerme(type: Db2Db){
+    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
-            new TransferSet('afu_erdwaerme_pub_private_quelle.sql', 'afu_erdwaerme_pub.private_quelle', true),
-            new TransferSet('afu_erdwaerme_pub_problembereich.sql', 'afu_erdwaerme_pub.problembereich', true),
-            new TransferSet('afu_erdwaerme_pub_ueberlagerter_ews_bereich.sql',
-                    'afu_erdwaerme_pub.ueberlagerter_ews_bereich', true),
-            new TransferSet('afu_erdwaerme_pub_ews_zone.sql', 'afu_erdwaerme_pub.ews_zone', true),
-            new TransferSet('afu_erdwaerme_pub_abfrageperimeter_kanton.sql','afu_erdwaerme_pub.abfrageperimeter_kanton',
-                    true),
-            new TransferSet('afu_erdwaerme_pub_gew_bew_ad.sql', 'afu_erdwaerme_pub.gew_bew_ad', true),
-            new TransferSet('afu_erdwaerme_pub_erdsonde.sql', 'afu_erdwaerme_pub.erdsonde', true),
-            new TransferSet('afu_erdwaerme_pub_ews_max_tiefe.sql', 'afu_erdwaerme_pub.ews_max_tiefe', true)
+            new TransferSet('edit/bohrungen.sql', 'afu_erdwaermesonden_pub.erdwaermesonden_bohrung', true)
     ];
 }
 
-task refreshSolr(type:Exec, dependsOn:'transferAfuErdwaerme') {
-	commandLine 'curl', '-i', '--max-time', '5', solrIndexupdaterBaseUrl + '/queue?ds=ch.so.afu.wasserbewirtschaftung.erdwaermenutzung_gerda'
+task transferErdwaermeAdditionals(type: Db2Db, dependsOn:'transferErdwaerme'){
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
+    transferSets = [
+            new TransferSet('sogis/private_quelle.sql', 'afu_erdwaermesonden_other_pub.private_quelle', true),
+            new TransferSet('sogis/problembereich.sql', 'afu_erdwaermesonden_other_pub.problembereich', true),
+            new TransferSet('sogis/ueberlagerter_ews_bereich.sql', 'afu_erdwaermesonden_other_pub.ueberlagerter_ews_bereich', true),
+            new TransferSet('sogis/ews_zone.sql', 'afu_erdwaermesonden_other_pub.ews_zone', true),
+            new TransferSet('sogis/abfrageperimeter_kanton.sql','afu_erdwaermesonden_other_pub.abfrageperimeter_kanton', true),
+            new TransferSet('sogis/gew_bew_ad.sql', 'afu_erdwaermesonden_other_pub.gew_bew_ad', true),
+            new TransferSet('sogis/ews_max_tiefe.sql', 'afu_erdwaermesonden_other_pub.ews_max_tiefe', true)
+    ];
 }
