--- a/arp_npl_import/build.gradle
+++ b/arp_npl_import/build.gradle
@@ -35,12 +35,7 @@ task checkXtfName() {
     }
 }
 
-task validateDataset(type: IliValidator, dependsOn: 'checkXtfName') {
-    description = "Validiert einen Datensatz (=XTF)."    
-    dataFiles = [xtf]
-}
-
-task replaceDataset (type: Ili2pgReplace, dependsOn: 'validateDataset') {
+task replaceDataset (type: Ili2pgReplace, dependsOn: 'checkXtfName') {
     description = "Ersetzt einen Datensatz (=XTF) in der Erfassungsdatenbank."
     database = [dbUriEdit, dbUserEdit, dbPwdEdit]
     dbschema = "arp_npl"
