--- a/agi_ch_gemeinden/build.gradle
+++ b/agi_ch_gemeinden/build.gradle
@@ -41,8 +41,8 @@ task unzipData(type: Copy, dependsOn: 'download'){
 }
 
 
-task unzipSwissBoundaries3D(type: Copy, dependsOn: 'download'){
-    description = "Unzip swissBOUNDARIES3D_ili2_LV95_V1_3.itf from swissBOUNDARIES3D.zip."
+task unzipSwissBoundaries3D(type: Copy, dependsOn: 'unzipData'){
+    description = "Unzip swissBOUNDARIES3D_ili2_LV95_V1_3.itf from ch.swisstopo.swissboundaries3d-gemeinde-flaeche.fill.zip."
     doLast {
         println "File unzipped to directory: " + pathToUnzipFolder
     }
