--- a/agi_ch_gemeinden/build.gradle
+++ b/agi_ch_gemeinden/build.gradle
@@ -11,11 +11,9 @@ apply plugin: 'ch.so.agi.gretl'
 
 defaultTasks 'transferDataToEditDb'
 
-def nameOfZipWithBoundaries = 'ch.swisstopo.swissboundaries3d-gemeinde-flaeche.fill.zip'
 def pathToTempFolder = System.getProperty("java.io.tmpdir")
 def pathToUnzipFolder = Paths.get(pathToTempFolder, 'unzip_data')
-def pathToDataZip = Paths.get(pathToTempFolder, "ch.swisstopo.swissboundaries3d-gemeinde-flaeche.fill.zip")
-def pathToZipWithBoundaries = Paths.get(pathToUnzipFolder.toString(), nameOfZipWithBoundaries)
+def pathToDataZip = Paths.get(pathToTempFolder, 'ch.swisstopo.swissboundaries3d-gemeinde-flaeche.fill.zip')
 def xtfFilePath = Paths.get(pathToUnzipFolder.toString(),'INTERLIS_2_LV95_LN02','swissBOUNDARIES3D_1_3.xtf')
 
 
@@ -30,23 +28,12 @@ task download(type: Download){
 }
 
 
-task unzipData(type: Copy, dependsOn: 'download'){
-    description = "Unzip ch.swisstopo.swissboundaries3d-gemeinde-flaeche.fill.zip."
+task unzipSwissBoundaries3D(type: Copy, dependsOn: 'download'){
+    description = "Unzip swissBOUNDARIES3D_1_3.xtf from ch.swisstopo.swissboundaries3d-gemeinde-flaeche.fill.zip."
     doLast {
         println "File unzipped to directory: " + pathToUnzipFolder
     }
-    from zipTree(file(pathToDataZip))
-    into pathToUnzipFolder
-    include nameOfZipWithBoundaries
-}
-
-
-task unzipSwissBoundaries3D(type: Copy, dependsOn: 'unzipData'){
-    description = "Unzip swissBOUNDARIES3D_ili2_LV95_V1_3.itf from ch.swisstopo.swissboundaries3d-gemeinde-flaeche.fill.zip."
-    doLast {
-        println "File unzipped to directory: " + pathToUnzipFolder
-    }
-    from zipTree(pathToZipWithBoundaries)
+    from zipTree(pathToDataZip)
     into file(pathToUnzipFolder)
     include "**/*.xtf"
 }
