--- a/afu_erdwaermesonden_weitere_pub/build.gradle
+++ b/afu_erdwaermesonden_weitere_pub/build.gradle
@@ -10,11 +10,6 @@ task transferErdwaermeAdditionals(type: Db2Db){
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('private_quelle.sql', 'afu_erdwaermesonden_weitere_pub.private_quelle', true),
-            new TransferSet('problembereich.sql', 'afu_erdwaermesonden_weitere_pub.problembereich', true),
-            new TransferSet('ueberlagerter_ews_bereich.sql', 'afu_erdwaermesonden_weitere_pub.ueberlagerter_ews_bereich', true),
-            new TransferSet('ews_zone.sql', 'afu_erdwaermesonden_weitere_pub.ews_zone', true),
-            new TransferSet('abfrageperimeter_kanton.sql','afu_erdwaermesonden_weitere_pub.abfrageperimeter_kanton', true),
-            new TransferSet('gew_bew_ad.sql', 'afu_erdwaermesonden_weitere_pub.gew_bew_ad', true),
-            new TransferSet('ews_max_tiefe.sql', 'afu_erdwaermesonden_weitere_pub.ews_max_tiefe', true)
+            new TransferSet('abfrageperimeter_kanton.sql','afu_erdwaermesonden_weitere_pub.abfrageperimeter_kanton', true)
     ];
 }
