[arp_nutzungsvereinbarung_pub] sourceDb neu auf Edit
sourceDb geändert von sogis zu edit

--- a/arp_nutzungsvereinbarung_pub/build.gradle
+++ b/arp_nutzungsvereinbarung_pub/build.gradle
@@ -8,7 +8,7 @@ description = "GRETL-Job für Datenumbau der Nutzungsvereinbarungsdaten von der 
 defaultTasks 'transferArpNutzungsvereinbarung'
 
 task transferArpNutzungsvereinbarung(type: Db2Db){
-    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('arp_nutzungsvereinbarung_pub_nutzungsvrnbrngen_nutzungsvreinbarungen.sql',
