--- a/awjf_waldpflege_kontrolle/build.gradle
+++ b/awjf_waldpflege_kontrolle/build.gradle
@@ -23,6 +23,6 @@ task transferAwjfWaldpflegeErfassung(type: Db2Db){
 }
 
 task deleteFromAwjfWaldpflegeErfassung(type: SqlExecutor){
-    database = [dbLocalUriEdit, dbLocalUserEdit, dbLocalPwdEdit]
+    database = [dbUriEdit, dbUserEdit, dbPwdEdit]
     sqlFiles = ['delete_from_awjf_waldpflege_erfassung.sql']
 }
