--- a/demo_file_upload/Jenkinsfile
+++ b/demo_file_upload/Jenkinsfile
@@ -6,8 +6,8 @@ node('master') {
     def inputFile = input message: 'Datei hochladen', parameters: [file(name: "$uploadFileName", description: 'Hochzuladende Datei auswählen')]
     dir("$JENKINS_HOME/jobs/$JOB_BASE_NAME/builds/$BUILD_NUMBER") {
         stash name: 'uploadFile', includes: "$uploadFileName"
-        sh "rm $uploadFileName"
     }
+    sh "rm $inputFile"
 }
 
 node (params.nodeLabel ?: 'gretl') {
