[demo_file_upload] Upload file to build directory (#583)
* Upload file to build directory (the default)
* Stash uploaded file directly from upload directory
* Use absolute path for removing uploaded file

--- a/demo_file_upload/Jenkinsfile
+++ b/demo_file_upload/Jenkinsfile
@@ -3,12 +3,11 @@ def uploadFileName = 'data.xtf'
 
 node('master') {
     gretljobsRepo = "${env.GRETL_JOB_REPO_URL}"
-    // Hack: The following line implicitly creates the $workspace directory
-    // which otherwise would be missing before the first build
-    sh 'pwd'
-    def inputFile = input message: 'Datei hochladen', parameters: [file(name: "$workspace/$uploadFileName", description: 'Hochzuladende Datei auswählen')]
-    stash name: 'uploadFile', includes: "$uploadFileName"
-    sh "rm $uploadFileName"
+    def inputFile = input message: 'Datei hochladen', parameters: [file(name: "$uploadFileName", description: 'Hochzuladende Datei auswählen')]
+    dir("$JENKINS_HOME/jobs/$JOB_BASE_NAME/builds/$BUILD_NUMBER") {
+        stash name: 'uploadFile', includes: "$uploadFileName"
+    }
+    sh "rm $inputFile"
 }
 
 node (params.nodeLabel ?: 'gretl') {
