Add special Jenkinsfile which allows uploading a file

--- a/avt_ausnahmetransportrouten_export_ai/build.gradle
+++ b/avt_ausnahmetransportrouten_export_ai/build.gradle
@@ -15,7 +15,7 @@ defaultTasks 'uploadMgdm'
 Package and upload to the KKGEO AI
 */
 def exportFileName = 'data'
-def pathToUploadFolder = '.upload'
+def pathToUploadFolder = 'upload'
 def zipName = 'iliexport.zip'
 
 
