--- a/avt_oevkov/build.gradle
+++ b/avt_oevkov/build.gradle
@@ -14,25 +14,25 @@ def currentYear = '2020'
 defaultTasks 'do_Gesamtberechnung'
 
 task AuswertungGTFS(type: SqlExecutor){
-    database = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    database = [dbUriEdit, dbUserEdit, dbPwdEdit]
     sqlParameters = [currentYear: currentYear]
     sqlFiles = ['insert_into_gtfs_auswertung.sql']
 }
 
 task AuswertungGesamt(type: SqlExecutor){
-    database = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    database = [dbUriEdit, dbUserEdit, dbPwdEdit]
     sqlParameters = [currentYear: currentYear]
     sqlFiles = ['insert_into_gesamtauswertung.sql']
 }
 
 task AuswertungKosten(type: SqlExecutor){
-    database = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    database = [dbUriEdit, dbUserEdit, dbPwdEdit]
     sqlParameters = [currentYear: currentYear]
     sqlFiles = ['berechnung_kosten.sql']
 }
 
 task AuswertungHaltestellenbuffer(type: SqlExecutor){
-    database = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    database = [dbUriEdit, dbUserEdit, dbPwdEdit]
     sqlParameters = [currentYear: currentYear]
     sqlFiles = ['haltestellenbuffer_insert.sql']
 }
