--- a/afu_gewaesserschutz_pub/build.gradle
+++ b/afu_gewaesserschutz_pub/build.gradle
@@ -3,7 +3,7 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'transferZonen'
+defaultTasks 'uploadMgdm'
 
 task transferAfuGewaesserschutz(type: Db2Db){
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
@@ -35,4 +35,35 @@ task transferZonen(type: Db2Db, dependsOn:archiveData){
     transferSets = [
             new TransferSet('aww_gszoar_zonen_areale.sql', 'public.aww_gszoar', false)
     ]
+}
+
+/*
+Package and upload to the KKGEO AI
+*/
+def exportFileName = 'data.xtf'
+def pathToUploadFolder = 'upload'
+def zipName = 'iliexport.zip'
+def pathToTempFolder = System.getProperty("java.io.tmpdir")
+
+
+task zipMgdm(type: Zip, dependsOn:transferZonen) {
+    archiveName = zipName
+    destinationDir = file(pathToTempFolder)
+
+    from Paths.get(pathToUploadFolder)
+}
+
+task uploadMgdm (dependsOn: zipMgdm) {
+    description = "Lädt die Daten in die Aggregationsinfrastruktur hoch."
+
+    def aiLogin = aiUser + ":" + aiPwd
+    def serverUrl = "https://" + aiServer + "/data_agg/interlis/import"
+    def zipFilePath = Paths.get(pathToTempFolder, zipName)
+
+    doLast {    
+        def response = ["curl", "-u", aiLogin, "-F", "topic=planerischer_gewaesserschutz", "-F",
+                        "lv95_file=@" + zipFilePath, "-F", "publish=true", serverUrl
+                        ].execute().text
+        println(response)
+    }
 }
