--- a/afu_gewaesserschutz_pub/build.gradle
+++ b/afu_gewaesserschutz_pub/build.gradle
@@ -6,7 +6,7 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'uploadMgdm'
+defaultTasks 'removeTmpFiles'
 
 task transferAfuGewaesserschutz(type: Db2Db){
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
@@ -40,33 +40,50 @@ task transferZonen(type: Db2Db, dependsOn:archiveData){
     ]
 }
 
-/*
-Package and upload to the KKGEO AI
-*/
-def exportFileName = 'data.xtf'
-def pathToUploadFolder = 'upload'
-def zipName = 'iliexport.zip'
 def pathToTempFolder = System.getProperty("java.io.tmpdir")
+def exportFileName = 'gefkart.xtf'
+def exportFile = file(Paths.get(pathToTempFolder.toString(), exportFileName))
 
-
-task zipMgdm(type: Zip, dependsOn:transferZonen) {
-    archiveName = zipName
-    destinationDir = file(pathToTempFolder)
-
-    from Paths.get(pathToUploadFolder)
+task exportGefkartMgdm(type: Ili2pgExport, dependsOn: transferZonen) {
+    description = "Exportiert die Gewässerschutzdaten in ein xtf-File."
+    database = [dbUriEdit, dbUserEdit, dbPwdEdit]
+    dbschema = "afu_gewaesserschutz"
+    models = "PlanerischerGewaesserschutz_LV95_V1_1"
+    dataFile = exportFile
 }
 
-task uploadMgdm (dependsOn: zipMgdm) {
-    description = "Lädt die Daten in die Aggregationsinfrastruktur hoch."
+/*
+4. Package and upload to the KKGEO AI
+*/
+def zipName = 'iliexport.zip'
+
+task zipGefkartMgdm(type: Zip, dependsOn: 'exportGefkartMgdm'){
+    description = "Zipt das xtf-File mit den Gewässerschutzdaten für den Upload in die " +
+            "Aggregationsinfrastruktur."
+    from pathToTempFolder
+    include exportFileName
+    archiveName zipName
+	destinationDir(file(pathToTempFolder))
+}
+
+
+task uploadGefkartMgdm (dependsOn: zipGefkartMgdm) {
+    description = "Lädt die Gewässerschutzdaten in die Aggregationsinfrastruktur hoch."
 
     def aiLogin = aiUser + ":" + aiPwd
     def serverUrl = "https://" + aiServer + "/data_agg/interlis/import"
-    def zipFilePath = Paths.get(pathToTempFolder, zipName)
+    def zipFilePath = Paths.get(pathToTempFolder.toString(), zipName)
 
-    doLast {    
+    doLast {
         def response = ["curl", "-u", aiLogin, "-F", "topic=planerischer_gewaesserschutz", "-F",
                         "lv95_file=@" + zipFilePath, "-F", "publish=true", serverUrl
                         ].execute().text
         println(response)
     }
 }
+
+task removeTmpFiles(type: Delete, dependsOn: uploadGefkartMgdm){
+    description = "Entfernt während der Ausführung des Jobs erstellte Dateien."
+	delete file(Paths.get(pathToTempFolder.toString(), zipName)), exportFile
+}
+
