--- a/afu_gewaesserschutz_pub/build.gradle
+++ b/afu_gewaesserschutz_pub/build.gradle
@@ -26,12 +26,12 @@ task transferSurroundingCantons(type: Db2Db, dependsOn:transferAfuGewaesserschut
             new TransferSet('sogis/aww_gszustr.sql', 'afu_gewaesserschutz_ausserkantonal_pub.aww_gszustr', true)
     ]
 }
-task archiveData(type: SqlExecutor, dependsOn:transferSurroundingCantons){
+/*task archiveData(type: SqlExecutor, dependsOn:transferSurroundingCantons){
     description = "Archiviert die Daten mit archiv=0 im Schema aww_gszoar"
     database = [dbUriSogis, dbUserSogis, dbPwdSogis]
     sqlFiles = ['aww_gszoar_status_archivierung.sql']
-}
-task transferZonen(type: Db2Db, dependsOn:archiveData){
+}*/
+task transferZonen(type: Db2Db, dependsOn:transferSurroundingCantons){
     description = "Datenübernahme auf edit-DB für Nadelstich"
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
