--- a/afu_gewaesserschutz_pub/build.gradle
+++ b/afu_gewaesserschutz_pub/build.gradle
@@ -6,7 +6,7 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'removeTmpFiles'
+defaultTasks 'transferZonen'
 
 task transferAfuGewaesserschutz(type: Db2Db){
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
@@ -26,12 +26,12 @@ task transferSurroundingCantons(type: Db2Db, dependsOn:transferAfuGewaesserschut
             new TransferSet('sogis/aww_gszustr.sql', 'afu_gewaesserschutz_ausserkantonal_pub.aww_gszustr', true)
     ]
 }
-/*task archiveData(type: SqlExecutor, dependsOn:transferSurroundingCantons){
+task archiveData(type: SqlExecutor, dependsOn:transferSurroundingCantons){
     description = "Archiviert die Daten mit archiv=0 im Schema aww_gszoar"
     database = [dbUriSogis, dbUserSogis, dbPwdSogis]
     sqlFiles = ['aww_gszoar_status_archivierung.sql']
 }
-task transferZonen(type: Db2Db, dependsOn:transferSurroundingCantons){
+task transferZonen(type: Db2Db, dependsOn:archiveData){
     description = "Datenübernahme auf edit-DB für Nadelstich"
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
@@ -39,51 +39,3 @@ task transferZonen(type: Db2Db, dependsOn:transferSurroundingCantons){
             new TransferSet('aww_gszoar_zonen_areale.sql', 'public.aww_gszoar', false)
     ]
 }
-*/
-def pathToTempFolder = System.getProperty("java.io.tmpdir")
-def exportFileName = 'gefkart.xtf'
-def exportFile = file(Paths.get(pathToTempFolder.toString(), exportFileName))
-
-task exportGefkartMgdm(type: Ili2pgExport, dependsOn: transferSurroundingCantons) {
-    description = "Exportiert die Gewässerschutzdaten in ein xtf-File."
-    database = [dbUriEdit, dbUserEdit, dbPwdEdit]
-    dbschema = "afu_gewaesserschutz" 
-    models = "PlanerischerGewaesserschutz_V1_1"
-    dataFile = exportFile
-}
-
-/*
-4. Package and upload to the KKGEO AI
-*/
-def zipName = 'iliexport.zip'
-
-task zipGefkartMgdm(type: Zip, dependsOn: 'exportGefkartMgdm'){
-    description = "Zipt das xtf-File mit den Gewässerschutzdaten für den Upload in die " +
-            "Aggregationsinfrastruktur."
-    from pathToTempFolder
-    include exportFileName
-    archiveName zipName
-	destinationDir(file(pathToTempFolder))
-}
-
-
-task uploadGefkartMgdm (dependsOn: zipGefkartMgdm) {
-    description = "Lädt die Gewässerschutzdaten in die Aggregationsinfrastruktur hoch."
-
-    def aiLogin = aiUser + ":" + aiPwd
-    def serverUrl = "https://" + aiServer + "/data_agg/interlis/import"
-    def zipFilePath = Paths.get(pathToTempFolder.toString(), zipName)
-
-    doLast {
-        def response = ["curl", "-u", aiLogin, "-F", "topic=planerischer_gewaesserschutz", "-F",
-                        "lv95_file=@" + zipFilePath, "-F", "publish=true", serverUrl
-                        ].execute().text
-        println(response)
-    }
-}
-
-task removeTmpFiles(type: Delete, dependsOn: uploadGefkartMgdm){
-    description = "Entfernt während der Ausführung des Jobs erstellte Dateien."
-	delete file(Paths.get(pathToTempFolder.toString(), zipName)), exportFile
-}
-
