[afu_gewaesserschutz_pub] build.gradl angepasst
Name xtf-File angepasst SO_gefkart.xtf

--- a/afu_gewaesserschutz_pub/build.gradle
+++ b/afu_gewaesserschutz_pub/build.gradle
@@ -43,7 +43,7 @@ task transferZonen(type: Db2Db, dependsOn:archiveData){
 }
  
 def pathToTempFolder = System.getProperty("java.io.tmpdir")
-def exportFileName = 'gewschutz.xtf'
+def exportFileName = 'SO_gefkart.xtf'
 def exportFile = file(Paths.get(pathToTempFolder.toString(), exportFileName))
 
 task exportGefkartMgdm(type: Ili2pgExport, dependsOn:transferZonen) {
