[afu_igel] println url to stdout for debuggin

--- a/afu_igel/build.gradle
+++ b/afu_igel/build.gradle
@@ -15,6 +15,10 @@ igelTypes.each { igelType ->
         dest pathToTempFolder + "/"+igelType+".json"
         overwrite true
 
+        doFirst {
+            println "https://igel.softec.ch/so/api/export/"+igelType+"?token="+igelToken
+        }
+
         doLast {
             println "File downloaded to: " + pathToTempFolder
         }
