[av_gb_abgleich] umzug von sogis auf edit DB

--- a/agi_av_gb_abgleich_pub/build.gradle
+++ b/agi_av_gb_abgleich_pub/build.gradle
@@ -7,14 +7,14 @@ defaultTasks 'moveConvertedDataToPubDb'
 
 task transferGbData(type: Db2Db){
     sourceDb = [dbUriCapitastra, dbUserCapitastra, dbPwdCapitastra]
-    targetDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     transferSets = [
             new TransferSet('agi_av_gb_abgleich_import_gb_daten.sql', 'agi_av_gb_abgleich_import.gb_daten', true)
     ]
 }
 
 task convertData(type: SqlExecutor, dependsOn: 'transferGbData'){
-    database = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    database = [dbUriEdit, dbUserEdit, dbPwdEdit]
     sqlFiles = [
             'agi_av_gb_abgleich_import_differenzen_staging.sql',
             'agi_av_gb_abgleich_import_uebersicht_des_vergleichs_staging.sql'
@@ -22,20 +22,19 @@ task convertData(type: SqlExecutor, dependsOn: 'transferGbData'){
 }
 
 task moveConvertedDataToPubDb(type: Db2Db, dependsOn: 'convertData'){
-    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('agi_av_gb_abgleich_pub_differenzen.sql', 'agi_av_gb_abgleich_pub.differenzen', true),
             new TransferSet('agi_av_gb_abgleich_pub_uebersicht_des_vergleichs.sql',
                     'agi_av_gb_abgleich_pub.uebersicht_des_vergleichs', true)
     ]
-
-    finalizedBy 'removeImportedData'
 }
-
-task removeImportedData(type: SqlExecutor){
-    database = [dbUriSogis, dbUserSogis, dbPwdSogis]
+/*
+task removeImportedData(type: SqlExecutor, dependsOn: moveConvertedDataToPubDb){
+    database = [dbUriEdit, dbUserEdit, dbPwdEdit]
     sqlFiles = [
             'delete_from_agi_av_gb_abgleich_import.sql'
     ]
 }
+*/
